# holdy

./: .gitignore  CLAUDE.md  COMPARACAO_FLUXOS.md  PLANO_EXECUCAO.md  README.md  acerta_ip.sh  ajustes.txt  dev-dashboard.html  nginx-jelastic.conf.bak.remote  prod-dashboard.html  silvio.txt
apprastreio/backend/: .env.example  Cargo.toml
apprastreio/backend/src/: config.rs  handlers.rs  main.rs  models.rs  notify.rs  router.rs  store.rs
gatebox/gatebox-rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  integracao.md  regras_de_negocio.md  start-dev.sh
gatebox/gatebox-rust/db/: anchor-blockchain-schema.sql  create-table.sql  insert.sql  patch-dev-auth-passwords.sql  seed-key-pix.sql  seed-transaction-anchors.sql
gatebox/gatebox-rust/migrations/: 20260303204518_gateway_failover.sql  20260303204600_transaction_gateway_fields.sql  20260303205000_transaction_fee_audit_fields.sql  20260304000000_app_log.sql  20260304000001_hospital_message.sql  20260524000000_fees_person_type.sql  20260524000001_disputes.sql  20260531000000_transaction_anchors.sql  20260710000000_transaction_gateway_tx_fields.sql
gatebox/gatebox-rust/scripts/: run-rust.sh  setup-env.sh  start-infra.sh  test-endpoints.sh
gatebox/gatebox-rust/src/: config.rs  constantes.rs  lib.rs  main.rs  metrics_server.rs  openapi.rs  server.rs
gatebox/gatebox-rust/src/account_rules/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/account_status_types/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/account_types/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/accounts/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/address/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/address_types/: ddl.rs  service.rs
gatebox/gatebox-rust/src/anchor/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs  types.rs
gatebox/gatebox-rust/src/app_log/: ddl.rs  mod.rs  repository.rs
gatebox/gatebox-rust/src/authentication/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/bank_bridge/: apicash_notify.rs  handler.rs  mod.rs  whatsapp_notify.rs
gatebox/gatebox-rust/src/company/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/control_med/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/core/: mod.rs
gatebox/gatebox-rust/src/customer/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/customer_status_types/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/disputes/: ddl.rs  handler.rs  mod.rs  model.rs  repository.rs
gatebox/gatebox-rust/src/fees/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/history_med/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/hospital_message/: ddl.rs  mod.rs  repository.rs
gatebox/gatebox-rust/src/invoice/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/invoice_status_types/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/invoice_types/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/invoice_types_backup/: handler.rs  mod.rs  repository.rs
gatebox/gatebox-rust/src/key_pix/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/key_pix_cache/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/kyc_risk_types/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/management/: ddl.rs  handler.rs  mod.rs  repository.rs  service.rs
gatebox/gatebox-rust/src/model/: account_rules.rs  account_status_types.rs  account_types.rs  accounts.rs  address.rs  address_types.rs  authentication.rs  company.rs  control_med.rs  customer.rs  customer_status_types.rs  fees.rs  history_med.rs  invoice.rs  invoice_status_types.rs  invoice_types.rs  itemspage.rs  key_pix.rs  key_pix_cache.rs  kyc_risk_types.rs  management.rs  mod.rs  partners.rs  partners_list.rs  pix_key_types.rs  provider.rs  responses.rs  sec_med.rs  shared_key.rs  status_controle_med_types.rs  status_sec_med_types.rs  styled.rs  (+13 more)
gatebox/simulador_rust/client-simulator/: Cargo.toml
gatebox/simulador_rust/seventrust/: Cargo.toml
gatebox/simulador_rust/simulator_anchor_pix/: Cargo.toml
gatebox/simulador_rust/sulcred/: Cargo.toml
money/apicash/: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  STATUS.md  [VAZIO]  styles
money/apicash/docs/: alredy_done.txt  anchor-http-contract.md  apicache.drawio  arquitetura.md  bpm-flows.md  handoff-2026-04-25.md  ideia.txt  prompts.txt  sep31-scope.md  transactional-readiness.md
money/apicash/migrations/: 20260112000000_apicash_placeholder.sql  20260424120000_disputes_and_custody.sql  20260424204100_user_scores.sql  20260425141000_orders_pending_funding.sql  20260428120000_orders_funding_instruction.sql  20260523000000_document_validation_cache.sql  20260525000001_listings.sql  20260525000002_order_tracking_status.sql  20260525000003_import_jobs.sql  20260528000001_order_buyer_name.sql  20260601000000_wa_contacts.sql  20260601000001_nfse_document_cache.sql  20260603000001_tracking_seller_peer.sql  20260604000002_wa_contacts_pix_key.sql  20260604000010_dispute_evidence.sql  20260610000001_wa_contacts_phone.sql  20260614000001_proposals.sql  20260621000001_social_users.sql  20260621000002_proposals_seller_document.sql  20260705000000_users_password_auth.sql  20260712000001_order_platform_origin.sql
money/apicash/scripts/: bootstrap-mainnet-env.sh  bootstrap-testnet-env.sh  dev_parallel.sh  nfse-cpf-lookup.sh  run-local-stack.sh  soroban-mainnet-deploy.sh  soroban-testnet-check.sh  soroban-testnet-deploy.sh  testnet-onchain-smoke.sh  validate-testnet-env.sh  validate-x402-env.sh  wa-simulate-transaction.sh  x402-smoke.sh
money/apicash/soroban-contracts/: .gitignore  Cargo.toml  README.md
(+1580 files in other folders)
