[package]
name = "seventrust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seventrust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
