[package]
name = "sulcred"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sulcred"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
