[package]
name = "apicash-disputes"
description = "Serviço de disputas APICash (escrow / Soroban)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
apicash-shared = { workspace = true }
apicash-custody = { workspace = true }
apicash-events = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
apicash-custody = { workspace = true }
apicash-shared = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
