[package]
name = "apicash-importer"
description = "Universal product importer: JSON-LD, OpenGraph, MercadoLivre, LLM fallback"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
apicash-shared = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"
scraper = "0.20"
hmac = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
uuid = { workspace = true }
redis = { workspace = true }
