[package]
name = "apicash-logistics"
description = "Shipping integration: Melhor Envio (Correios + Jadlog) — quote, label, tracking"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
apicash-shared = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
