[package]
name = "apicash-shared"
description = "Shared types, errors, configuration, and utilities for APICash"
version = "0.1.0"
edition = "2021"
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-str"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
dotenvy = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
